fix dashboard paddings at top, and on desktop set statistics to right, fix table with statiscics width on tablet

--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -39,9 +39,6 @@
     max-width: 300px;
     gap: 10px;
   }
-  @media screen and (min-width: 1280px) {
-    padding: 0 0 0 20px;
-  }
 }
 
 .chart {
@@ -68,7 +65,7 @@
     max-width: 768px;
     padding-top: 50px;
     justify-content: space-between;
-  align-items: center;
+    align-items: center;
   }
 
   @media screen and (min-width: 1280px) {
